--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -21,7 +21,7 @@ jobs:
           cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:'
       - run: |
           sudo apt-get update -y
-          sudo apt-get install -y ninja-build libgtk-3-dev libwebkit2gtk-4.0-dev
+          sudo apt-get install -y ninja-build libgtk-3-dev libwebkit2gtk-4.0-dev keybinder-3.0
       
       - name: Cache
         uses: actions/cache@v4
@@ -266,7 +266,7 @@ jobs:
           cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:'
       - run: |
           sudo apt-get update -y
-          sudo apt-get install -y ninja-build libgtk-3-dev libwebkit2gtk-4.0-dev
+          sudo apt-get install -y ninja-build libgtk-3-dev libwebkit2gtk-4.0-dev keybinder-3.0
       
       - name: Cache
         uses: actions/cache@v4
