--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -8,6 +8,47 @@ permissions:
   attestations: write
 
 jobs:
+  test-android:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: "stable" # or: 'beta', 'dev' or 'master'
+          architecture: x64 # optional, x64 or arm64
+          cache: true
+          cache-key: 'flutter-${{ github.job }}-:os:-:channel:-:version:-:arch:-:hash:'
+          cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:'
+      
+      - name: Cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            build
+            ~/.gradle
+          key: ${{ runner.os }}-flutter-${{ github.job }}-${{ hashFiles('pubspec.lock') }}
+      - run: flutter --version
+      - run: flutter pub get
+      - run: flutter analyze
+
+      - name: Enable KVM
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+
+      - name: run tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 29
+          script: flutter test integration_test -d android -r github --coverage
+      - uses: codecov/codecov-action@v5
+        with:
+          flags: android
+        env: 
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
   test-linux:
     runs-on: ubuntu-22.04 # libwebkit2gtk-4.1 is not compatible with flutter
     steps:
