--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -54,6 +54,8 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 35
+          target: default
+          arch: x86_64
           script: flutter test integration_test -d android -r github --coverage
       - uses: codecov/codecov-action@v5
         with:
