--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   form_builder_validators: ^11.1.1
   fuzzywuzzy: ^1.2.0
+  get_it: ^8.0.3
   github: ^9.24.0
   hexcolor: ^3.0.1
   hotkey_manager: ^0.2.3
@@ -66,6 +67,7 @@ dependencies:
   timezone: ^0.10.0
   url_launcher: ^6.3.1
   uuid: ^4.5.1
+  watch_it: ^1.6.2
   yaml: ^3.1.3
 
 dev_dependencies:
