--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   path_provider: ^2.1.5
   permission_handler: ^11.3.1
   pub_semver: ^2.1.5
+  quick_actions: ^1.1.0
   restart_app: ^1.3.2
   share_plus: ^10.1.4
   shared_preferences: ^2.3.4
