--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   url_launcher: ^6.3.1
   uuid: ^4.5.1
   watch_it: ^1.6.2
+  web_socket_channel: ^3.0.2
   yaml: ^3.1.3
 
 dev_dependencies:
