--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,12 +62,12 @@ dependencies:
   restart_app: ^1.3.2
   share_plus: ^10.1.4
   shared_preferences: ^2.3.4
+  socket_io_client: ^3.0.2
   sqlite3_flutter_libs: ^0.5.28
   timezone: ^0.10.0
   url_launcher: ^6.3.1
   uuid: ^4.5.1
   watch_it: ^1.6.2
-  web_socket_channel: ^3.0.2
   yaml: ^3.1.3
 
 dev_dependencies:
