--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   fuzzywuzzy: ^1.2.0
   get_it: ^8.0.3
   github: ^9.24.0
+  grpc: ^4.0.4
   hexcolor: ^3.0.1
   hotkey_manager: ^0.2.3
   http: ^1.2.2
@@ -57,12 +58,12 @@ dependencies:
   path: ^1.9.0
   path_provider: ^2.1.5
   permission_handler: ^11.3.1
+  protobuf: ^4.0.0
   pub_semver: ^2.1.5
   quick_actions: ^1.1.0
   restart_app: ^1.3.2
   share_plus: ^10.1.4
   shared_preferences: ^2.3.4
-  socket_io_client: ^3.0.2
   sqlite3_flutter_libs: ^0.5.28
   timezone: ^0.10.0
   url_launcher: ^6.3.1
