--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   archive: ^4.0.2
-  auto_route: ^10.0.1
+  auto_route: ^11.0.0
   crypto: ^3.0.6
   cupertino_icons: ^1.0.8
   download: ^1.0.0
@@ -45,30 +45,31 @@ dependencies:
   flutter_local_notifications: ^19.0.0
   form_builder_validators: ^11.1.1
   fuzzywuzzy: ^1.2.0
-  get_it: ^8.0.3
+  get_it: ^9.1.1
   github: ^9.24.0
-  grpc: ^4.0.4
+  grpc: ^5.0.0
   hexcolor: ^3.0.1
   hotkey_manager: ^0.2.3
   http: ^1.2.2
   intl: ^0.20.2
   logger: ^2.5.0
   mocktail: ^1.0.4
-  package_info_plus: ^8.1.2
+  openid_client: ^0.4.9+1
+  package_info_plus: ^9.0.0
   path: ^1.9.0
   path_provider: ^2.1.5
   permission_handler: ^12.0.1
-  protobuf: ^4.0.0
+  protobuf: ^5.1.0
   pub_semver: ^2.1.5
   quick_actions: ^1.1.0
   restart_app: ^1.3.2
-  share_plus: ^11.0.0
+  share_plus: ^12.0.1
   shared_preferences: ^2.3.4
   sqlite3_flutter_libs: ^0.5.28
   timezone: ^0.10.0
-  url_launcher: ^6.3.1
+  url_launcher: ^6.3.2
   uuid: ^4.5.1
-  watch_it: ^1.6.2
+  watch_it: ^2.3.1
   yaml: ^3.1.3
 
 dev_dependencies:
