--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -92,7 +92,7 @@ jobs:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   test-linux:
-    runs-on: ubuntu-22.04 # libwebkit2gtk-4.1 is not compatible with flutter
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
@@ -104,7 +104,7 @@ jobs:
           cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:'
       - run: |
           sudo apt-get update -y
-          sudo apt-get install -y ninja-build libgtk-3-dev libwebkit2gtk-4.0-dev keybinder-3.0
+          sudo apt-get install -y ninja-build libgtk-3-dev keybinder-3.0
       
       - name: Cache
         uses: actions/cache@v4
@@ -337,7 +337,7 @@ jobs:
           projectId: fastter-todo-prijindal
           
   linux:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
@@ -349,7 +349,7 @@ jobs:
           cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:'
       - run: |
           sudo apt-get update -y
-          sudo apt-get install -y ninja-build libgtk-3-dev libwebkit2gtk-4.0-dev keybinder-3.0
+          sudo apt-get install -y ninja-build libgtk-3-dev keybinder-3.0
       
       - name: Cache
         uses: actions/cache@v4
